docs: update readme, citations, vignette and news

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,24 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+    collapse = TRUE,
+    comment = "#>",
+    fig.path = "man/figures/README-",
+    out.width = "100%"
+)
+```
+
 # MarkerGenes
 
 <!-- badges: start -->
-[![Lifecycle: dormant](https://img.shields.io/badge/lifecycle-dormant-blue.svg)](https://www.tidyverse.org/lifecycle/#dormant) \[\[DOI\] <!-- badges: end -->
+[![Lifecycle: dormant](https://img.shields.io/badge/lifecycle-dormant-blue.svg)](https://www.tidyverse.org/lifecycle/#dormant)
+[![DOI]
+<!-- badges: end -->
 
 This repository contains gene cell-type/tissue specificity matrices, which can be used to determine the specificity of a gene to a particular cell type or tissue.
 
@@ -13,12 +28,13 @@ To access the datasets within this package, please clone the repository to your 
 
 To use functions within the package, install from github. This can be done using the following lines of code:
 
-``` r
+```{r "install", eval = FALSE}
 if (!requireNamespace("devtools", quietly = TRUE)) {
     install.packages("devtools")
 }
 
 devtools::install_github("RHReynolds/MarkerGenes")
+
 ```
 
 Please note that there is no plan to ever submit this code to `CRAN` or `Bioconductor`. This code was developed for personal use.
@@ -33,10 +49,12 @@ The code in this repository is released under an MIT license. This repository is
 
 ## Citation
 
-If you use any specificity matrices from this repository, please make sure you cite the original publication the specificity values were derived from. For details, please refer to: [dataset\_metadata.html](docs/dataset_metadata.html)
+If you use any specificity matrices from this repository, please make sure you cite the original publication the specificity values were derived from. For details, please refer to: [dataset_metadata.html](docs/dataset_metadata.html) 
 
-Below is the citation output from using `citation('MarkerGenes')` in R. Please run this yourself to check for any updates on how to cite **MarkerGenes**.
+Below is the citation output from using `citation('MarkerGenes')` in R. Please run this yourself to check for any updates on how to cite __MarkerGenes__.
 
-``` r
+```{r 'citation', eval = requireNamespace('MarkerGenes')}
 print(citation("MarkerGenes"), bibtex = TRUE)
 ```
+
+
