--- a/vignettes/MarkerGenes.Rmd
+++ b/vignettes/MarkerGenes.Rmd
@@ -43,8 +43,10 @@ Resource that contains data related to:
 
 Resource also contains a number of functions that:
 
-- Allow users to query specificity matrices ([`query_gene_ctd()`](https://github.com/RHReynolds/MarkerGenes/blob/master/R/query_gene_ctd.R) - for more details, see [tutorial](https://rhreynolds.github.io/MarkerGenes/articles/articles/query_gene_ctd_tutorial.html)). **Be aware that this is only compatible with old-style EWCE specificity matrices.** 
-- Summarise the output of `query_gene_ctd()` using ([`summarise_specificity_plot()`](https://github.com/RHReynolds/MarkerGenes/blob/master/R/summarise_specificity_plot.R)). **Be aware that this is only compatible with old-style EWCE specificity matrices.** 
+- Allow users to query specificity matrices ([`query_gene_ctd()`](https://github.com/RHReynolds/MarkerGenes/blob/master/R/query_gene_ctd.R) - for more details, see [tutorial](https://rhreynolds.github.io/MarkerGenes/articles/articles/query_gene_ctd_tutorial.html)). 
+- Summarise the output of `query_gene_ctd()` using ([`summarise_specificity_plot()`](https://github.com/RHReynolds/MarkerGenes/blob/master/R/summarise_specificity_plot.R)). 
+
+**Please note that the above functions are only compatible with old-style EWCE specificity matrices.**
 
 ## What is gene specificity?
 - Specificity of a gene represents the proportion of the total expression of a gene found in one cell type as compared to that in all cell types (i.e., the mean expression in one cell type divided by the mean expression in all cell types). If the expression of a gene is shared between two or more cell types, it will get a lower specificity measure.
